2010-06-02  Dirk Schulze  <krit@webkit.org>

        Uneviewed.

        SVG repaintRect should be empty if content got clipped away
        https://bugs.webkit.org/show_bug.cgi?id=39965
        
        Baseline update for Qt.

        * platform/qt/svg/custom/empty-mask-expected.txt:

2010-06-01  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG repaintRect should be empty if content got clipped away
        https://bugs.webkit.org/show_bug.cgi?id=39965
        
        New repaintRect calculation causes updates of tests, where the content gets
        clipped away.

        * platform/mac/svg/clip-path/clip-path-with-container-expected.txt:
        * platform/mac/svg/clip-path/clip-path-with-invisibile-child-expected.txt:
        * platform/mac/svg/custom/empty-clip-path-expected.txt:
        * platform/mac/svg/custom/empty-mask-expected.txt:

2010-06-01  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r60539.
        http://trac.webkit.org/changeset/60539
        https://bugs.webkit.org/show_bug.cgi?id=40043

        Accidentally added an unreviewed and invalid change to the
        patch. (Requested by krit on #webkit).

        * platform/mac/svg/clip-path/clip-path-with-container-expected.txt:
        * platform/mac/svg/clip-path/clip-path-with-invisibile-child-expected.txt:
        * platform/mac/svg/custom/empty-clip-path-expected.txt:
        * platform/mac/svg/custom/empty-mask-expected.txt:

2010-06-01  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG repaintRect should be empty if content got clipped away
        https://bugs.webkit.org/show_bug.cgi?id=39965
        
        New repaintRect calculation causes updates of tests, where the content gets
        clipped away.

        * platform/mac/svg/clip-path/clip-path-with-container-expected.txt:
        * platform/mac/svg/clip-path/clip-path-with-invisibile-child-expected.txt: